add case sensitive to the setting.html

--- a/src/html/registration.html
+++ b/src/html/registration.html
@@ -161,7 +161,7 @@
 					
 					/* wirte username and password to users.txt */
 					let content = user + ":" + password + "\n";
-					let dict = {"mode":"dark"};
+					let dict = {"mode":"dark","caseSensitive":"on"};
 					f.append(content);
 
 					/* set up the user database */
