--- a/src/html/date_picker.html
+++ b/src/html/date_picker.html
@@ -3,10 +3,10 @@
 <head>
   <title></title>
 
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
-    <link href="./fontawesome/css/all.css" rel="stylesheet">
-    <link href="./src/css/blue.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+    <link href="../../fontawesome/css/all.css" rel="stylesheet">
+    <link href="../../src/css/blue.css" rel="stylesheet">
   <style type="text/css">
     body
     {
@@ -147,6 +147,6 @@
         <a href="#" id ="am">AM</a>
         <a href="#" id ="pm">PM</a>
     </div>
-    <script src = "./test.js"></script>
+    <script src = "../js/date_picker.js"></script>
 </body>
 </html>
