--- a/src/html/reminder.html
+++ b/src/html/reminder.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
-	<link href="./fontawesome/css/all.css" rel="stylesheet">
-	<script src="./node_modules/jquery/dist/jquery.min.js"></script>
+	<link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
+	<link href="../../fontawesome/css/all.css" rel="stylesheet">
+	<script src="../../node_modules/jquery/dist/jquery.min.js"></script>
 	<title></title>
 	<style type="text/css">
 
@@ -113,7 +113,7 @@
 		s = $("pre").text();
 		console.log(s);
 		$("#startTime").click(function(){
-			window.location.href = "1.html"
+			window.location.href = "date_picker.html"
 		})
 	</script>
 </body>
