--- a/src/html/confirmation.html
+++ b/src/html/confirmation.html
@@ -24,7 +24,7 @@
 
 <body>
 	<div class = "container">
-		<h2></h2>
+		<h2 style="position:relative; top:30px;left:10px;"></h2>
 		<div style="position: fixed;top:80%;left:60%">
 			<button id = "cancel" type="button" class="btn btn-primary"></button>
 			&nbsp;&nbsp;
