add ok and cancel button

--- a/src/html/date_picker.html
+++ b/src/html/date_picker.html
@@ -147,6 +147,12 @@
         <a href="#" id ="am">AM</a>
         <a href="#" id ="pm">PM</a>
     </div>
+    <div style="position: absolute; top:90%; left: 10%;">
+        <button id = "cancel"type="button" class="btn btn-danger" style="width:100px">Cancel</button>
+    </div>
+    <div style="position: absolute; top: 90%; left: 70%;">
+        <button id = "ok" type="button" class="btn btn-primary" style="width:100px; background-color:green">Ok</button>
+    </div>
     <script src = "../js/date_picker.js"></script>
 </body>
 </html>
