add alarm for reminder

--- a/src/html/diary.html
+++ b/src/html/diary.html
@@ -376,7 +376,8 @@
 				}
 				if(type == "DELETE")
 				{
-
+					/* should change to use remover later on. Should make a big change on photo moudule too */
+					//$("#" + index).remove();
 					$("#" + index).css("display","none");
 					diaryEntries[index].isdeleted = true;
 				}
