--- a/src/html/calendar.html
+++ b/src/html/calendar.html
@@ -73,7 +73,8 @@
     
     <span class="dot" style="position: fixed; left: 17%; top: 3%; background-color: blue"><span style="position: relative; left: 30px; font-size: 25px;bottom:13px">Reminders</span></span>
     <span class="dot" style="position: fixed; right: 30%;top: 3%; background-color: red"><span style="position: relative; left: 20px; font-size: 25px;bottom:13px">Diaries</span></span>
-    <a href = "#" style="top: 80%; position: fixed; right: 10%;font-size: 40px;"><i class="fas fa-plus-circle"></i></a>
+
+    <a href = "#" id = "reminder" style="top: 80%; position: fixed; right: 10%;font-size: 40px;"><i class="fas fa-plus-circle"></i></a>
 
 <div class="container" style = "margin-top:50px">
     <div>
