--- a/src/html/registration.html
+++ b/src/html/registration.html
@@ -171,6 +171,7 @@
 					fs.mkdir(path + "/video", err);
 					fs.mkdir(path + "/music", err);
 					fs.mkdir(path + "/entry", err);
+					fs.mkdir(path + "/reminder", err);
 					fs.mkdir(path + "/photo/Diary Entry", err);
 					fs.mkdir(path + "/photo/ENCODEDiary Entry",err);
 					
