visual aid for reminder and diary

--- a/src/html/reminder.html
+++ b/src/html/reminder.html
@@ -550,14 +550,14 @@
 		<div id = "startTime" style="cursor: pointer; width: 100%">
 			<i class="far fa-clock"></i>
 			<span>Start</span>
-			<span id = "startTimeText" style="position: absolute; right: 35px"></span>
+			<span id = "startTimeText" style="position: absolute; right: 5%"></span>
 		</div>
 		<hr>
 		
 		<div id = "endTime" style="cursor: pointer; width: 100%">
 			<i class="far fa-clock"></i>
 			<span>End</span> &nbsp;
-			<span id = "endTimeText" style="position: absolute; right: 35px"></span>
+			<span id = "endTimeText" style="position: absolute; right: 5%"></span>
 		</div>
 		<hr>
 		<div id = "alarm" style="cursor: pointer;">
@@ -574,7 +574,7 @@
 		<div id ="repeat" style="cursor: pointer; width: 100%">
 			<i class="fas fa-sync"></i>
 			<span>Repeat</span>
-			<span id = "repeatText" style="position: absolute; right: 35px">Never</span>
+			<span id = "repeatText" style="position: absolute; right: 5%">Never</span>
 		</div>
 		
 	</div>
