--- a/src/html/reminder.html
+++ b/src/html/reminder.html
@@ -792,7 +792,7 @@
 			else filePath = reminder.filePath;
 			
 			Reminder.writeToFile(reminder,filePath);
-			Reminder.readFromFile(reminder,filePath);
+			//Reminder.readFromFile(reminder,filePath);
 			
 			
 			if(reminder.alarmTime !== "")
